hphp/hack/test/typecheck/inout/bad_inout_use_lvalue2.php.exp
File "bad_inout_use_lvalue2.php", line 8, characters 5-19:
You cannot decorate a constant as inout (Parsing[1002])
File "bad_inout_use_lvalue2.php", line 8, characters 11-20:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_lvalue2.php", line 3, characters 7-16:
Please add a type hint 'const SomeType SOME_CONST' (Naming[2001])
